[gd_scene load_steps=13 format=2]

[ext_resource path="res://Gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
rough = true

[sub_resource type="Shader" id=2]
code = "shader_type spatial;

uniform float hitcolor = 1.0;

void fragment(){
	ALBEDO = hitcolor * vec3(1.0,0.0,0.0);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/hitcolor = 1.0

[sub_resource type="CapsuleMesh" id=4]
material = SubResource( 3 )
radius = 1.5
mid_height = 3.0

[sub_resource type="CapsuleShape" id=5]
radius = 1.45322
height = 3.02675

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 2, 0.413, 2 )

[sub_resource type="CapsuleShape" id=6]
margin = 0.065
radius = 1.5
height = 3.0

[sub_resource type="CubeMesh" id=7]
size = Vector3( 1.695, 1.675, 18.156 )

[sub_resource type="CapsuleShape" id=8]
radius = 2.28908
height = 1.40379

[node name="Berzerker" type="KinematicBody"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 512
collision_mask = 513
script = ExtResource( 2 )
cover_node_loc = "../NavMesh/Cover/Cover2"
enemy_type = "Berzerker"
health = 160
speed = 20

[node name="EnemyElements" type="Spatial" parent="."]

[node name="RigidBody" type="RigidBody" parent="EnemyElements"]
collision_layer = 14
collision_mask = 14
mass = 1.07
physics_material_override = SubResource( 1 )
gravity_scale = 4.0

[node name="MeshInstance" type="MeshInstance" parent="EnemyElements/RigidBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="EnemyElements/RigidBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="EnemyElements/RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.63812e-08, 1.56041, -0.603531 )
mesh = SubResource( 10 )
material/0 = null

[node name="EnemyHitDetector" type="Area" parent="EnemyElements"]

[node name="MeshInstance2" type="CollisionShape" parent="EnemyElements/EnemyHitDetector"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="RayCastLineOfSight" type="RayCast" parent="EnemyElements"]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 1.862, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2000 )
collision_mask = 5
collide_with_areas = true

[node name="MeshInstance" type="MeshInstance" parent="EnemyElements/RayCastLineOfSight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.43565e-06, 0, -25.3689 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="Gun" type="Spatial" parent="EnemyElements"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.853, 0, -1.25021 )

[node name="BulletSpawner" type="Spatial" parent="EnemyElements/Gun"]
transform = Transform( -7.87548e-08, 0, -1.8017, 0, 1.8017, 0, 1.8017, 0, -7.87548e-08, -0.000112295, 0.145123, -0.592498 )

[node name="Gun" parent="EnemyElements/Gun/BulletSpawner" instance=ExtResource( 1 )]

[node name="HeadLoc" type="Position3D" parent="EnemyElements"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75161, 0 )

[node name="PositionRight" type="Position3D" parent="."]
transform = Transform( 0.950554, 0.31056, 0, -0.31056, 0.950554, 0, 0, 0, 1, 3.05609, 0, 0 )

[node name="PositionCenter" type="Position3D" parent="."]

[node name="PositionLeft" type="Position3D" parent="."]
transform = Transform( 0.935844, -0.352413, 0, 0.352413, 0.935844, 0, 0, 0, 1, -3.03768, 0, 0 )

[node name="DetectionCheckTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CoverTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="ShootingTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.716
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.12
autostart = true

[node name="PhysicalCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0.108825, 0 )
shape = SubResource( 8 )
[connection signal="timeout" from="CoverTimer" to="." method="_on_CoverTimer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
